--- a/slides/000-intro/_004-R.qmd
+++ b/slides/000-intro/_004-R.qmd
@@ -8,15 +8,18 @@ name: R
 
 To quote the [{{< fa brands r-project >}} project website](https://www.r-project.org)^[[[R]{.mono} wikipedia](https://en.wikipedia.org/wiki/R_(programming_language))]
 
-> R is a free software environment for statistical computing and graphics. It compiles and runs on a wide variety of UNIX platforms, Windows and MacOS.
+> R is a free software environment for statistical computing and graphics.
+> It compiles and runs on a wide variety of UNIX platforms, Windows and MacOS.
 
 . . .
 
 What does that mean?
 
-- {{< fa brands r-project >}} was created for the statistical and graphical work required by econometrics--written by statistical programmers
+- {{< fa brands r-project >}} was created for the statistical and graphical work required by econometrics
+--written by statistical programmers
 
-- {{< fa brands r-project >}} has a vibrant, thriving online community. ([stack overflow](https://stackoverflow.com/questions/tagged/r))
+- {{< fa brands r-project >}} has a vibrant, thriving online community. 
+([stack overflow](https://stackoverflow.com/questions/tagged/r))
 
 - Plus it's [free]{.hi}  and [open source]{.hi}
 
@@ -24,29 +27,39 @@ What does that mean?
 
 ## Why are we using {{< fa brands r-project >}}?
 
-1\. {{< fa brands r-project >}} is [free]{.hi} and [open source]{.hi}—saving both you and the university money.
+1\. {{< fa brands r-project >}} is [free]{.hi} and [open source]{.hi}
+—saving both you and the university money.
 
 <br>
 
-2\. _Related:_ Outside of a small group of economists, private- and public-sector [employers favor {{< fa brands r-project >}}]{.blue} over [Stata]{.hi} and most competing softwares.
+2\. _Related:_ Outside of a small group of economists, private- and public-sector 
+[employers favor {{< fa brands r-project >}}]{.blue} over [Stata]{.hi} and most competing softwares.
 
 <br>
 
-3\. {{< fa brands r-project >}} is very [flexible and powerful]{.hi}—adaptable to nearly any task, _e.g._, 'metrics, spatial data analysis, machine learning, web scraping, data cleaning, website building, teaching. I write all my slides, problem sets, and exams in [R]{.mono}.
+3\. {{< fa brands r-project >}} is very [flexible and powerful]{.hi}
+—adaptable to nearly any task, 
+_e.g._, 'metrics, spatial data analysis, machine learning, web scraping, data cleaning,
+website building, teaching. 
+I write all my slides, problem sets, and exams in [R]{.mono}.
 
 ---
 
 ## Why are we using {{< fa brands r-project >}}?
 
-4\. _Related:_ {{< fa brands r-project >}} imposes [no artificial restrictions]{.hi} on your amount of observations, variables, memory, or processing power.
+4\. _Related:_ {{< fa brands r-project >}} imposes [no artificial restrictions]{.hi} 
+on your amount of observations, variables, memory, or processing power.
 
 <br>
 
-5\. If you put in the work,^[Learning {{< fa brands r-project >}} definitely requires time and effort.] you will come away with a [valuable and marketable]{.hi} tool.
+5\. If you put in the work,
+^[Learning {{< fa brands r-project >}} definitely requires time and effort.] 
+you will come away with a [valuable and marketable]{.hi} tool.
 
 <br>
 
-6\. I 💖 {{< fa brands r-project >}}
+6\. Learning [R]{.mono} and the tidyverse will help you to learn other useful tools like 
+SQL, python, etc.
 
 ---
 
@@ -105,7 +118,8 @@ You need to install [2]{.hi} pieces of software:
 
 . . .
 
-For explicit instructions for how to install, follow [this tutorial](https://learnr-examples.shinyapps.io/ex-setup-r/#section-welcome)  
+For explicit instructions for how to install, 
+follow [this tutorial](https://learnr-examples.shinyapps.io/ex-setup-r/#section-welcome)  
 
 . . .
 
